HTML Style Using CSS

--- a/full-stack-web-developer/html/home/home_page.html
+++ b/full-stack-web-developer/html/home/home_page.html
@@ -179,6 +179,24 @@
                 <a href="..\assignment_8\page_20251011_02.html">\html\assignment_8\page_20251011_02.html</a>
             </td>
         </tr>
+        <tr>
+            <td>9.1</td>
+            <td>2025-10-13</td>
+            <td>Create an Admission form</td>
+            <td>Assignment_9_Web_Page_1</td>
+            <td>
+                <a href="..\assignment_9\page_20251013_01.html">\html\assignment_9\page_20251013_01.html</a>
+            </td>
+        </tr>
+        <tr>
+            <td>9.2</td>
+            <td>2025-10-13</td>
+            <td>HTML Style Using CSS</td>
+            <td>Assignment_9_Web_Page_2</td>
+            <td>
+                <a href="..\assignment_9\page_20251013_02.html">\html\assignment_9\page_20251013_02.html</a>
+            </td>
+        </tr>
     </table>
 </body>
 </html>
