html with css assignments

--- a/full-stack-web-developer/html/assignment_10/page_20251013_02.html
+++ b/full-stack-web-developer/html/assignment_10/page_20251013_02.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment_9.2</title>
+    <title>Inline CSS</title>
 </head>
 <body style="text-align: center;">
     <p>
@@ -15,5 +15,14 @@
     <p style="color: blue; font-size: 25px; font-style: italic;">
         This is a great website learn technologies in very simple way.
     </p>
+    <h3 style= "
+        color: red;
+        font-style: italic;
+        text-align: center;
+        font-size: 50px;
+        padding-top: 25px;
+    ">
+        Learning HTML using Inline CSS
+    </h3>
 </body>
 </html>
