--- a/full-stack-web-developer/html/home/home_page.html
+++ b/full-stack-web-developer/html/home/home_page.html
@@ -192,9 +192,9 @@
             <td>9.2</td>
             <td>2025-10-13</td>
             <td>HTML Style Using CSS</td>
-            <td>Assignment_9_Web_Page_2</td>
+            <td>Assignment_10_Web_Page_1</td>
             <td>
-                <a href="..\assignment_9\page_20251013_02.html">\html\assignment_9\page_20251013_02.html</a>
+                <a href="..\assignment_10\page_20251013_02.html">\html\assignment_10\page_20251013_02.html</a>
             </td>
         </tr>
     </table>
