--- a/web-dev-tuition/css/assignment_20251119/assignment_03_css_background_size_property_v1.html
+++ b/web-dev-tuition/css/assignment_20251119/assignment_03_css_background_size_property_v1.html
@@ -25,6 +25,11 @@
     </style>
 </head>
 <body>
-    
+    <h2>background-size: auto;</h2>
+    <div id="div1"></div>
+    <h2>background-size: 150px 150px;</h2>
+    <div id="div2"></div>
+    <h2>background-size: 30%;</h2>
+    <div id="div3"></div>
 </body>
 </html>
