--- a/web-dev-tuition/javascript/assignment_20251204/assignment_05_js_digital_clock_example.html
+++ b/web-dev-tuition/javascript/assignment_20251204/assignment_05_js_digital_clock_example.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h3>JavaScript Digital Clock Example</h3>
+    <p>Current Time: <span id="txt"></span></p>
     <script>
         window.onload=function(){
             getTime();
