--- a/web-dev-tuition/javascript/assignment_20251209/assignment_01_js_history_object.html
+++ b/web-dev-tuition/javascript/assignment_20251209/assignment_01_js_history_object.html
@@ -7,12 +7,9 @@
 </head>
 <body>
     <h3>History</h3>
-    <input type="button" value="click" onclick="history.back()">
-    <script>
-        history.back(); // for previous page
-        history.forward(); // for next page
-        history.go(2); // for next 2nd page
-        history.go(-2); // for previous 2nd page
-    </script>
+    <input type="button" value="back" onclick="history.back()"> <!-- history.back(); // for previous page -->
+    <input type="button" value="forward" onclick="history.forward()"> <!-- history.forward(); // for next page -->
+    <input type="button" value="go forward 2 pages" onclick="history.go(2);"> <!-- history.go(2); // for next 2nd page -->
+    <input type="button" value="go backword 2 pages" onclick="history.go(-2)"> <!-- history.go(-2); // for previous 2nd page -->
 </body>
 </html>
