--- a/web-dev-tuition/javascript/assignment_20260108/assignment_02_js_cookie_attributes_cookie_maxage.html
+++ b/web-dev-tuition/javascript/assignment_20260108/assignment_02_js_cookie_attributes_cookie_maxage.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Cookies</title>
+    <title>Cookie max-age attribute</title>
 </head>
 <body>
     <input type="button" value="setCookie" onclick="setCookie()">
     <input type="button" value="getCookie" onclick="getCookie()">
     <script>
         function setCookie(){
-            document.cookie = "username=Duke Martin; path=/";
-            alert("Cookie set");
+            document.cookie="username=Duke Martin; max-age=" + (60*60*24*365) + "; path=/"
         }
         function getCookie(){
-            if(document.cookie.length != 0){
-                alert(document.cookie);
+            if(document.cookie.length!=0){
+                var array=document.cookie.split("=");
+                alert("Name=" + array[0] + " " + "Value=" + array[1]);
             }
             else{
                 alert("Cookie not available");
